@@ -25,8 +25,8 @@ Description: Provides convenience functions for analyzing factorial
     mixed model using lme4::lmer() and computes p-values for all
     effects in the model using either the Kenward-Rogers
     approximation of degrees of freedom (LMM only), parametric
-    bootstrap (LMMs and GLMMs) or likelihood ratio tests (LRT).
-    afex uses type 3 sums of squares as default (imitating
+    bootstrap (LMMs and GLMMs) or likelihood ratio tests (LMMs and
+    GLMMs). afex uses type 3 sums of squares as default (imitating
     commercial statistical software) and sets the default contrasts
     to contr.sum. Furthermore, compare.2.vectors() conveniently
     compares two vectors using a variety of tests.
@@ -36,8 +36,8 @@ Encoding: UTF-8
 Authors@R: c(person(given="Henrik", family="Singmann",
     email="henrik.singmann@psychologie.uni-freiburg.de",
     role=c("aut", "cre")))
-Version: 0.7-84
-Date: 2013-10-02
+Version: 0.7-85
+Date: 2013-12-02
 Collate:
     'afex-package.R'
     'aov.car.R'
